# tag-std

./: .gitignore  .gitmodules  Asterinas-pre-RFC.md  Asterinas-safety-properties.md  R4L-safety-properties.md  README.md  modified_doc.md  os-sp.md  pre-RFC.md  primitive-sp.md  sp-origin.md  usage.md
data/: core.md  (+5 more)
demo/: Cargo.toml  run.sh  rust-toolchain.toml
demo/build_rs/: Cargo.toml  build.rs
demo/build_rs/src/: lib.rs  main.rs
demo/contract/: Cargo.toml
demo/contract/src/: lib.rs
demo/foo/: Cargo.toml
demo/foo/safety-tags/: sp-foo.toml
demo/foo/src/: main.rs
demo/proc_macro/contract/src/: lib.rs
demo/proc_macro/src/: main.rs
demo/rustc_driver/: Cargo.toml  run.sh  rust-toolchain.toml  rustfmt.toml
demo/rustc_driver/safety-tool-lib/: Cargo.toml
demo/rustc_driver/safety-tool-lib/src/: lib.rs  safety.rs
demo/rustc_driver/safety-tool-lib/tests/: property_attrs.rs  snapshots.rs  test.sh  testcase_memo_arg.rs  testcase_property.rs
demo/rustc_driver/safety-tool-macro/: Cargo.toml
demo/rustc_driver/safety-tool-macro/src/: lib.rs
demo/rustc_driver/safety-tool-macro/tests/: memo.rs  memo_testcase.rs
demo/rustc_driver/safety-tool-parser/: Cargo.toml
demo/rustc_driver/safety-tool-parser/src/: lib.rs
demo/rustc_driver/src/: main.rs
demo/rustc_driver/tests/basic/: Cargo.toml
demo/safety-lib/: Cargo.toml
demo/safety-lib/tests/: test.rs  testcase_discharges.rs  testcase_memo_arg.rs  testcase_memo_property.rs  testcase_property.rs
demo/safety-lib/tests/oracle/: testcase_discharges.rs  testcase_memo_property.rs  testcase_property.rs
demo/safety-macro/: Cargo.toml
demo/safety-macro/src/: lib.rs
demo/safety-parser/: Cargo.toml
demo/safety-parser/src/: lib.rs
demo/safety-parser/src/property_attr/: mod.rs  property.rs  utils.rs
demo/safety-tool-lib/: Cargo.toml
demo/safety-tool-lib/src/: safety.rs
demo/safety-tool-lib/tests/: test.rs  testcase_memo_arg.rs  testcase_memo_property.rs  testcase_property.rs
demo/safety-tool-lib/tests/oracle/: testcase_memo_arg.rs  testcase_memo_property.rs  testcase_property.rs
demo/safety-tool-macro/src/: lib.rs
demo/src/: main.rs
demo/tests/: Cargo.toml  unsafe_calls.rs
demo/tests/basic/: Cargo.toml
demo/tests/result/: lib_after_macro_expansion.rs
demo/tests/snapshots/: unsafe_calls.txt  unsafe_calls_discharge_all.txt  unsafe_calls_method.txt  unsafe_calls_panic_assign.txt  unsafe_calls_panic_assign_fn_ptr.txt  unsafe_calls_panic_discharge_all_tagged_less.txt  unsafe_calls_panic_discharge_all_tagged_less_fine.txt  unsafe_calls_panic_discharge_all_tagged_more.txt  unsafe_calls_panic_method.txt  unsafe_calls_panic_no_tag.txt  unsafe_calls_panic_with_dep.txt  unsafe_calls_with_dep.txt
demo/tests/snippets/: unsafe_calls_method.rs  unsafe_calls_panic_assign.rs  unsafe_calls_panic_assign_fn_ptr.rs  unsafe_calls_panic_discharge_all_tagged_less.rs  unsafe_calls_panic_discharge_all_tagged_more.rs
demo/tests/src/: lib.rs  main.rs
safety-tool/: CHANGELOG.md  Cargo.toml  README.md  build.rs  collect_tags.sh  gen_rust_toolchain_toml.rs  run.sh  rust-toolchain.toml
safety-tool/.cargo/: config.toml
safety-tool/assets/: sp-core.toml  sp-rust-for-linux.toml  sp_demo.toml
safety-tool/assets/collect_tags/: ostd.json
safety-tool/safety-lib/: Cargo.toml  Makefile
safety-tool/safety-lib/src/: lib.rs  safety.rs
safety-tool/safety-lib/tests/: test.rs  testcase_property.rs  testcase_safety_macro.rs
safety-tool/safety-lsp/: Cargo.toml  README.md  demo.rs
safety-tool/safety-lsp/src/: backend.rs  main.rs  rust.rs
safety-tool/safety-lsp/vscode-plugin/: README.md  package-lock.json  package.json  tsconfig.json
safety-tool/safety-macro/: CHANGELOG.md  Cargo.toml
safety-tool/safety-macro/src/: lib.rs
safety-tool/safety-parser/: Cargo.toml
safety-tool/safety-parser/src/: configuration.rs  lib.rs  split_attrs.rs
safety-tool/src/: configuration.rs  lib.rs  logger.rs  main.rs  stat.rs  utils_cmd.rs
safety-tool/src/analyze_hir/: diagnostic.rs  mod.rs  visit.rs
safety-tool/src/utils/: cmd.rs  mod.rs  sysroot.rs
safety-tool/tests/: configuration.rs  safety_lib.rs  safety_macro.rs  unsafe_calls.rs
safety-tool/tests/basic/: Cargo.toml
safety-tool/tests/snapshots/: any_err.txt  any_err_2.txt  any_ok.txt  any_ok_2.txt  duplicated_discharge.txt  fault_event_err.txt  unsafe_calls.txt  unsafe_calls_discharge_all.txt  unsafe_calls_method.txt  unsafe_calls_panic_assign.txt  unsafe_calls_panic_assign_fn_ptr.txt  unsafe_calls_panic_discharge_all_tagged_less.txt  unsafe_calls_panic_discharge_all_tagged_less_fine.txt  unsafe_calls_panic_discharge_all_tagged_more.txt  unsafe_calls_panic_method.txt  unsafe_calls_panic_no_tag.txt  unsafe_calls_panic_with_dep.txt  unsafe_calls_with_dep.txt
safety-tool/tests/snippets/: any_err.rs  any_err_2.rs  any_ok.rs  any_ok_2.rs  duplicated_discharge.rs  fault_event_err.rs  safety_lib_basic.rs  safety_macro_basic.rs  sp.toml  unsafe_calls.rs  unsafe_calls_discharge_all.rs  unsafe_calls_method.rs  unsafe_calls_panic_assign.rs  unsafe_calls_panic_assign_fn_ptr.rs  unsafe_calls_panic_discharge_all_tagged_less.rs  unsafe_calls_panic_discharge_all_tagged_less_fine.rs  unsafe_calls_panic_discharge_all_tagged_more.rs  unsafe_calls_panic_method.rs  unsafe_calls_panic_no_tag.rs  unsafe_calls_panic_with_dep.rs  unsafe_calls_with_dep.rs
(+79 files in other folders)
