[package]
name = "safety-lsp"
version = "0.4.0"
edition = "2024"
description = "A lib for using safety tags defined in tag-std"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "time",
] }
tower-lsp-server = "0.22.1"

tree-sitter = "0.25.9"
tree-sitter-rust = "0.24.0"
ropey = "1.6.1"

safety-parser = { path = "../safety-parser/", version = "0.4.0" }
