[package]
name = "safety-macro"
version = "0.3.0"
edition = "2024"
authors = ["Artisan-Lab <xuh@fudan.edu.cn>"]
description = "A macro for using safety tags defined in tag-std"
license = "MPL-2.0"
repository = "https://github.com/Artisan-Lab/tag-std"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
safety-parser = { path = "../safety-parser", version = "0.3.0" }
