[package]
name = "safety-parser"
version = "0.2.0"
edition = "2024"
authors = ["Artisan-Lab <xuh@fudan.edu.cn>"]
description = "A lib for parsing safety tags defined in tag-std"
license = "MPL-2.0"
repository = "https://github.com/Artisan-Lab/tag-std"
readme = "README.md"

[dependencies]
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
proc-macro2 = "1"
